fix layout bug

--- a/client/src/components/title/Title.css
+++ b/client/src/components/title/Title.css
@@ -6,9 +6,25 @@
  }
 
  .logo img {
-     width: 10vw;
-     height: 10vw;
+     width: 50px;
+     height: 50px;
  }
+ @media screen and (max-width: 601px) {
+    .logo img{
+        width: 30px;
+        height: 30px;
+    }
+    img{
+        width: 100vw;
+        height: 300vw;
+        overflow: hidden;
+    }
+    .title-wrapper {
+        
+        justify-content: space-evenly;
+    
+    }
+}
 
  .logo {
      display: flex;
