--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -18,12 +18,11 @@
   
 .is-wrap{
     background-color:rgba(0, 0, 0, 0.9);
+    overflow: hidden;
     height: 20cm;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 1cm;
-    overflow-x: scroll;
     transition: opacity 5s linear 0.1s;
     opacity: 1;
 }
